adding files to devel branch

--- a/src/sst/elements/merlin/Makefile.am
+++ b/src/sst/elements/merlin/Makefile.am
@@ -50,6 +50,10 @@ libmerlin_la_SOURCES = \
 	topology/singlerouter.cc \
 	topology/hyperx.h \
 	topology/hyperx.cc \
+	topology/polarfly.cc \
+	topology/polarfly.h \
+	topology/polarstar.cc \
+	topology/polarstar.h \
 	hr_router/hr_router.h \
 	hr_router/hr_router.cc \
 	hr_router/xbar_arb_age.h \
@@ -83,6 +87,8 @@ libmerlin_la_SOURCES = \
 	interfaces/pymerlin-interface.py \
 	target_generator/pymerlin-targetgen.py \
 	topology/pymerlin-topo-dragonfly.py \
+	topology/pymerlin-topo-polarfly.py \
+	topology/pymerlin-topo-polarstar.py \
 	topology/pymerlin-topo-hyperx.py \
 	topology/pymerlin-topo-fattree.py \
 	topology/pymerlin-topo-mesh.py
@@ -127,6 +133,8 @@ BUILT_SOURCES = \
 	interfaces/pymerlin-interface.inc \
 	target_generator/pymerlin-targetgen.inc \
 	topology/pymerlin-topo-dragonfly.inc \
+	topology/pymerlin-topo-polarfly.inc \
+	topology/pymerlin-topo-polarstar.inc \
 	topology/pymerlin-topo-hyperx.inc \
 	topology/pymerlin-topo-fattree.inc \
 	topology/pymerlin-topo-mesh.inc
